        Change MemoryStream::createInstance to return a COMPtr

Part of Bug 25294: All WebKit/win classes should return COMPtrs from
        their static constructor members
        <https://bugs.webkit.org/show_bug.cgi?id=25294>

        Reviewed by Darin Adler.

        * MemoryStream.cpp:
        (MemoryStream::createInstance): Changed to return a COMPtr.
        (MemoryStream::Clone): Updated for createInstance change.
        * MemoryStream.h: Changed createInstance to return a COMPtr.

        * WebArchive.cpp:
        (WebArchive::data):
        * WebCoreSupport/EmbeddedWidget.cpp:
        (EmbeddedWidget::didReceiveData):
        * WebDataSource.cpp:
        (WebDataSource::data):
        * WebHistory.cpp:
        (WebHistory::data):
        * WebIconFetcher.cpp:
        (WebIconFetcherClient::finishedFetchingIcon):
        * WebResource.cpp:
        (WebResource::createInstance):
        Updated for changes to MemoryStream::createInstance.

Canonical link: https://commits.webkit.org/34744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42692 268f45cc-cd09-0410-ab3c-d52691b4dbfc