WebKit/win/WebHistory.cpp
@@ -569,7 +569,7 @@ HRESULT WebHistory::data(IStream** stream)
     if (!historyData)
         return S_OK;
 
-    COMPtr<MemoryStream> result(AdoptCOM, MemoryStream::createInstance(SharedBuffer::wrapCFData(historyData.get())));
+    COMPtr<MemoryStream> result = MemoryStream::createInstance(SharedBuffer::wrapCFData(historyData.get()));
     return result.copyRefTo(stream);
 }
 
